k3s-test-deployment/roles/nginx/files/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx-php
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
